# opticalc

./: Cargo.toml  LICENSE  Makefile  README.md  README.npm.md  induced_prism_calculator.js
src/: convert_power.rs  crossed_cylinders.rs  lib.rs  materials.rs  minimum_blank_size.rs  oblique_meridian.rs  prism.rs  transpose.rs  wasm.rs
