[package]
name = "opticalc"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ocudigital/opticalc"
keywords = ["optometry", "ophthalmology", "optics", "clinical", "dispensing"]
categories = ["science"]
description = "Utility functions and types for common clinical optics calculations used in optometry and ophthalmic settings."

[dependencies]

[dev-dependencies]
approx = "0.5"