[package]
name = "opticalc"
version = "0.1.2"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ocudigital/opticalc"
keywords = ["optometry", "ophthalmology", "optics", "clinical", "dispensing"]
categories = ["science"]
description = "Utility functions and types for common clinical optics calculations used in optometry and ophthalmic settings."

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"